<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/smokeWhite"
    tools:context=".activity.CalculatorActivity">

    <LinearLayout
        android:elevation="4dp"
        android:id="@+id/region_info_layout"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/region_flag"
            android:transitionName="regionFlag"
            android:contentDescription="@string/flag"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="70dp" />

        <RelativeLayout
            android:layout_weight="1"
            android:padding="6dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/region_name"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_below="@id/region_name"
                android:id="@+id/region_exchange_name"
                android:layout_width="match_parent"
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:padding="10dp"
        android:elevation="2dp"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="1"
            android:id="@+id/user_value"
            android:padding="10dp"
            android:gravity="end"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/symbol"
            android:padding="10dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:padding="10dp"
        android:elevation="4dp"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/user_input_value"
            android:padding="10dp"
            android:gravity="end"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <ImageButton
            android:contentDescription="@string/backspace"
            android:id="@+id/backspace"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:background="@drawable/ic_baseline_backspace_24px"
            android:layout_gravity="center"
            android:layout_width="30dp"
            android:layout_height="30dp" />

    </LinearLayout>

    <GridLayout
        android:rowCount="4"
        android:columnCount="4"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/seven"
            android:textSize="24sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/seven"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1" />

        <Button
            android:id="@+id/eight"
            android:textSize="24sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/eight"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <Button
            android:id="@+id/nine"
            android:textSize="24sp"
            android:text="@string/nine"
            android:textColor="@color/colorPrimary"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <Button
            android:id="@+id/divider"
            android:textSize="24sp"
            android:text="@string/div"
            android:textColor="@color/colorPrimary"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <Button
            android:id="@+id/four"
            android:textSize="24sp"
            android:text="@string/four"
            android:textColor="@color/colorPrimary"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <Button
            android:id="@+id/five"
            android:textSize="24sp"
            android:text="@string/five"
            android:textColor="@color/colorPrimary"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <Button
            android:id="@+id/six"
            android:textSize="24sp"
            android:text="@string/six"
            android:textColor="@color/colorPrimary"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <Button
            android:id="@+id/mux"
            android:textSize="24sp"
            android:text="@string/mux"
            android:textColor="@color/colorPrimary"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <Button
            android:id="@+id/one"
            android:textSize="24sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/one"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <Button
            android:id="@+id/two"
            android:textSize="24sp"
            android:text="@string/two"
            android:textColor="@color/colorPrimary"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <Button
            android:id="@+id/three"
            android:textSize="24sp"
            android:text="@string/three"
            android:textColor="@color/colorPrimary"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <Button
            android:id="@+id/dif"
            android:textSize="24sp"
            android:text="@string/dif"
            android:textColor="@color/colorPrimary"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <Button
            android:id="@+id/point"
            android:textSize="24sp"
            android:text="@string/point"
            android:textColor="@color/colorPrimary"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <Button
            android:id="@+id/zero"
            android:textSize="24sp"
            android:text="@string/zero"
            android:textColor="@color/colorPrimary"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <Button
            android:id="@+id/enter"
            android:text="@string/equal"
            android:textColor="@color/colorPrimary"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <Button
            android:id="@+id/sum"
            android:textSize="24sp"
            android:text="@string/sum"
            android:textColor="@color/colorPrimary"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

    </GridLayout>

</LinearLayout>