<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    tools:context=".activity.AboutActivity">

    <ImageView
        android:contentDescription="@string/app_name"
        android:id="@+id/logo"
        android:src="@drawable/logo"
        android:layout_width="80dp"
        android:layout_height="80dp" />

    <LinearLayout
        android:layout_toEndOf="@id/logo"
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/app_version"
            android:textColor="@color/colorPrimaryLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:paddingTop="4dp"
        android:layout_below="@id/logo"
        android:text="@string/app_description"
        android:textColor="@color/colorPrimary"
        android:layout_above="@id/suggested"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/suggested"
        android:layout_above="@id/other_apps"
        android:layout_margin="4dp"
        android:layout_width="match_parent"
        android:text="@string/suggested"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/other_apps"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            app:contentPadding="10dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            app:cardCornerRadius="4dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="getSpace"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/colorPrimaryLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:drawableTop="@drawable/ic_launcher_space"
                android:drawablePadding="6dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/smokeWhite"
                android:text="@string/space"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            app:contentPadding="10dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/colorPrimaryLight"
            android:layout_margin="4dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="getMovies"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:drawableTop="@drawable/ic_launcher_movies"
                android:drawablePadding="6dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/movies"
                android:textColor="@color/smokeWhite"/>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</RelativeLayout>