<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SettingsActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/appearance_root"
            android:textStyle="bold"
            android:background="@color/colorPrimaryLight"
            android:textColor="@color/smokeWhite"
            android:padding="10dp"
            android:text="@string/appearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/language"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:contentDescription="@string/language"
                android:src="@drawable/ic_baseline_language_24px"
                android:layout_gravity="center"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/language_text"
                    android:layout_width="match_parent"
                    android:text="@string/language"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/current_language"
                    android:textColor="@color/colorPrimaryLight"
                    android:layout_below="@id/language_text"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/theme"
            android:padding="10dp"
            android:clickable="false"
            android:focusable="false"
            android:alpha="0.5"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:contentDescription="@string/language"
                android:src="@drawable/ic_baseline_color_lens_24px"
                android:layout_gravity="center"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/theme_text"
                    android:layout_width="match_parent"
                    android:text="@string/theme"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/current_theme"
                    android:textColor="@color/colorPrimaryLight"
                    android:layout_below="@id/theme_text"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dateformat"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:contentDescription="@string/language"
                android:src="@drawable/ic_baseline_access_time_24px"
                android:layout_gravity="center"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/dateformat_text"
                    android:layout_width="match_parent"
                    android:text="@string/dateformat"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/current_dateformat"
                    android:textColor="@color/colorPrimaryLight"
                    android:layout_below="@id/dateformat_text"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/functionality_root"
            android:textStyle="bold"
            android:background="@color/colorPrimaryLight"
            android:textColor="@color/smokeWhite"
            android:padding="10dp"
            android:text="@string/functionality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/autoupdate"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:contentDescription="@string/language"
                android:src="@drawable/ic_baseline_refresh_24px"
                android:layout_gravity="center"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <TextView
                android:layout_weight="1"
                android:id="@+id/autoupdate_text"
                android:layout_width="0dp"
                android:text="@string/autoupdate"
                android:layout_marginStart="20dp"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                android:gravity="center_vertical"
                android:layout_height="wrap_content" />

            <Switch
                android:id="@+id/autoupdate_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/notifications"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:contentDescription="@string/language"
                android:src="@drawable/ic_notifications_black_24dp"
                android:layout_gravity="center"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <TextView
                android:layout_weight="1"
                android:id="@+id/notifications_text"
                android:layout_width="0dp"
                android:text="@string/notification"
                android:layout_marginStart="20dp"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                android:gravity="center_vertical"
                android:layout_height="wrap_content" />

            <Switch
                android:id="@+id/notifications_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>